# django-filter-demo

./: .cursorrules  README.md  db.sqlite3  pyproject.toml
.github/workflows/: django.yml
books/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_remove_book_author_book_authors.py
books/templates/books/: author_detail.html  author_list.html  book_detail.html  book_list.html
