[project]
name = "django-filter-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jon Bramley",email = "brammers@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
